# tapper

./: .gitignore  LICENSE  README.md  pyproject.toml
ansible/: install_playbook.yaml  update_playbook.yaml
src/tapper/: __init__.py  _cli.py  _config.py  _logger.py  _loops.py  _main.py  _outputs.py  _threads.py  cli.py  config.py  logger.py  loops.py  main.py  tapper.py
