[project]
name = "TAPPER"
dynamic = ["version"]
description = "HARDWARIO TAPPER - an MQTT NFC reader"
readme = "README.md"
authors = [
    { name = "Martin", email = "81148675+Martian-0007@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "adafruit-blinka>=8.56.0",
    "adafruit-circuitpython-pn532>=2.4.3",
    "click>=8.1.8",
    "loguru>=0.7.3",
    "pyyaml>=6.0.2",
]

[project.scripts]
tapper = "tapper:tapper.main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "hatch>=1.14.0",
    "ruff>=0.11.2",
]

[tool.hatch.build.hooks.version]
path = "src/tapper/_version.py"
